changed footer color

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11981,7 +11981,7 @@ textarea.form-control {
     border: 2px solid #ccd6f6 !important;
 }
 .ddnazzah-footer p {
-    color: rgba(255, 255, 255, 0.7);
+    color: #ccd6f6;
 }
 .ddnazzah-footer a {
     color: rgba(255, 255, 255, 0.7);
