changed to react-tree-timeline

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12743,83 +12743,29 @@ textarea.form-control {
 }
 
 /* ******************************************resume***************************** */
-.resume-wrap {
-    display: flex;
-    flex-grow: 1;
-    justify-content: center;
+.tl-wrapper {
+    padding-top: 120px;
 }
-
-.resume-wrap .position {
+.tl-description {
     font-size: 12px;
     font-weight: 600;
     letter-spacing: 3px;
     text-transform: uppercase;
 }
 
-.resume-wrap ol {
-    list-style: none;
+.tl-timeline::before {
+    background-color: rgba(255, 255, 255, 0.1) !important;
 }
 
-.ol-timeline {
-    list-style: none;
-    margin-top: 120px;
-    padding-left: 157px;
-    position: relative;
+.tl-date::after {
+    background-color: rgb(100, 255, 218) !important;
 }
 
-.ol-timeline:before {
-    content: "";
-    position: absolute;
-    width: 8px;
-    height: 94%;
-    margin-top: -7px;
-    top: 5px;
-    left: 133px;
-    border-radius: 2px;
-    background-color: rgba(255, 255, 255, 0.1);
-    transition: all 0.3s ease;
-    border: 1px solid transparent;
-    transform: scaleY(1.2);
-}
-
-.ol-timeline .item-section {
-    position: absolute;
-    left: -160px;
-    top: 0;
-    width: 120px;
-    text-align: right;
-}
-
-.ol-timeline .item-section:after {
-    content: "";
-    position: absolute;
-    width: 14px;
-    height: 14px;
-    margin-top: -7px;
-    top: 50%;
-    right: -27px;
-    border-radius: 50%;
-    background-color: rgb(100, 255, 218);
-    transition: all 0.3s ease;
-    border: 1px solid transparent;
-}
-
-.ol-timeline .item-section:before {
-    content: "";
-    position: absolute;
-    width: 9px;
-    height: 30px;
-    right: -25px;
-    top: -3px;
-    transition: all 0.3s ease;
-}
-
-.tl-item {
-    position: relative;
-    margin-bottom: 3rem;
-}
-
-.ol-timeline .content-wrapper .title {
+.tl-title {
     margin-top: 0;
     margin-bottom: 2px;
+    line-height: 1.5;
+    color: #ccd6f6;
+    font-weight: 400;
+    font-size: 20px;
 }
