--- a/css/animate.css
+++ b/css/animate.css
@@ -19,7 +19,7 @@ Copyright (c) 2015 Daniel Eden
 	-webkit-animation-fill-mode: both;
 	animation-fill-mode: both;
 }
-.ddnazzah-animated {
+.animated {
 	-webkit-animation-duration: 0.5s;
 	animation-duration: 0.5s;
 	-webkit-animation-fill-mode: both;
@@ -62,14 +62,24 @@ Copyright (c) 2015 Daniel Eden
 
 	40%,
 	43% {
-		-webkit-animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
+		-webkit-animation-timing-function: cubic-bezier(
+			0.755,
+			0.05,
+			0.855,
+			0.06
+		);
 		animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
 		-webkit-transform: translate3d(0, -30px, 0);
 		transform: translate3d(0, -30px, 0);
 	}
 
 	70% {
-		-webkit-animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
+		-webkit-animation-timing-function: cubic-bezier(
+			0.755,
+			0.05,
+			0.855,
+			0.06
+		);
 		animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
 		-webkit-transform: translate3d(0, -15px, 0);
 		transform: translate3d(0, -15px, 0);
@@ -95,14 +105,24 @@ Copyright (c) 2015 Daniel Eden
 
 	40%,
 	43% {
-		-webkit-animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
+		-webkit-animation-timing-function: cubic-bezier(
+			0.755,
+			0.05,
+			0.855,
+			0.06
+		);
 		animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
 		-webkit-transform: translate3d(0, -30px, 0);
 		transform: translate3d(0, -30px, 0);
 	}
 
 	70% {
-		-webkit-animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
+		-webkit-animation-timing-function: cubic-bezier(
+			0.755,
+			0.05,
+			0.855,
+			0.06
+		);
 		animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
 		-webkit-transform: translate3d(0, -15px, 0);
 		transform: translate3d(0, -15px, 0);
@@ -1903,15 +1923,19 @@ Copyright (c) 2015 Daniel Eden
 	}
 
 	40% {
-		-webkit-transform: perspective(400px) translate3d(0, 0, 150px) rotate3d(0, 1, 0, -190deg);
-		transform: perspective(400px) translate3d(0, 0, 150px) rotate3d(0, 1, 0, -190deg);
+		-webkit-transform: perspective(400px) translate3d(0, 0, 150px)
+			rotate3d(0, 1, 0, -190deg);
+		transform: perspective(400px) translate3d(0, 0, 150px)
+			rotate3d(0, 1, 0, -190deg);
 		-webkit-animation-timing-function: ease-out;
 		animation-timing-function: ease-out;
 	}
 
 	50% {
-		-webkit-transform: perspective(400px) translate3d(0, 0, 150px) rotate3d(0, 1, 0, -170deg);
-		transform: perspective(400px) translate3d(0, 0, 150px) rotate3d(0, 1, 0, -170deg);
+		-webkit-transform: perspective(400px) translate3d(0, 0, 150px)
+			rotate3d(0, 1, 0, -170deg);
+		transform: perspective(400px) translate3d(0, 0, 150px)
+			rotate3d(0, 1, 0, -170deg);
 		-webkit-animation-timing-function: ease-in;
 		animation-timing-function: ease-in;
 	}
@@ -1940,15 +1964,19 @@ Copyright (c) 2015 Daniel Eden
 	}
 
 	40% {
-		-webkit-transform: perspective(400px) translate3d(0, 0, 150px) rotate3d(0, 1, 0, -190deg);
-		transform: perspective(400px) translate3d(0, 0, 150px) rotate3d(0, 1, 0, -190deg);
+		-webkit-transform: perspective(400px) translate3d(0, 0, 150px)
+			rotate3d(0, 1, 0, -190deg);
+		transform: perspective(400px) translate3d(0, 0, 150px)
+			rotate3d(0, 1, 0, -190deg);
 		-webkit-animation-timing-function: ease-out;
 		animation-timing-function: ease-out;
 	}
 
 	50% {
-		-webkit-transform: perspective(400px) translate3d(0, 0, 150px) rotate3d(0, 1, 0, -170deg);
-		transform: perspective(400px) translate3d(0, 0, 150px) rotate3d(0, 1, 0, -170deg);
+		-webkit-transform: perspective(400px) translate3d(0, 0, 150px)
+			rotate3d(0, 1, 0, -170deg);
+		transform: perspective(400px) translate3d(0, 0, 150px)
+			rotate3d(0, 1, 0, -170deg);
 		-webkit-animation-timing-function: ease-in;
 		animation-timing-function: ease-in;
 	}
@@ -2868,7 +2896,12 @@ Copyright (c) 2015 Daniel Eden
 		opacity: 0;
 		-webkit-transform: scale3d(0.1, 0.1, 0.1) translate3d(0, -1000px, 0);
 		transform: scale3d(0.1, 0.1, 0.1) translate3d(0, -1000px, 0);
-		-webkit-animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
+		-webkit-animation-timing-function: cubic-bezier(
+			0.55,
+			0.055,
+			0.675,
+			0.19
+		);
 		animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
 	}
 
@@ -2886,7 +2919,12 @@ Copyright (c) 2015 Daniel Eden
 		opacity: 0;
 		-webkit-transform: scale3d(0.1, 0.1, 0.1) translate3d(0, -1000px, 0);
 		transform: scale3d(0.1, 0.1, 0.1) translate3d(0, -1000px, 0);
-		-webkit-animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
+		-webkit-animation-timing-function: cubic-bezier(
+			0.55,
+			0.055,
+			0.675,
+			0.19
+		);
 		animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
 	}
 
@@ -2909,7 +2947,12 @@ Copyright (c) 2015 Daniel Eden
 		opacity: 0;
 		-webkit-transform: scale3d(0.1, 0.1, 0.1) translate3d(-1000px, 0, 0);
 		transform: scale3d(0.1, 0.1, 0.1) translate3d(-1000px, 0, 0);
-		-webkit-animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
+		-webkit-animation-timing-function: cubic-bezier(
+			0.55,
+			0.055,
+			0.675,
+			0.19
+		);
 		animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
 	}
 
@@ -2927,7 +2970,12 @@ Copyright (c) 2015 Daniel Eden
 		opacity: 0;
 		-webkit-transform: scale3d(0.1, 0.1, 0.1) translate3d(-1000px, 0, 0);
 		transform: scale3d(0.1, 0.1, 0.1) translate3d(-1000px, 0, 0);
-		-webkit-animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
+		-webkit-animation-timing-function: cubic-bezier(
+			0.55,
+			0.055,
+			0.675,
+			0.19
+		);
 		animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
 	}
 
@@ -2950,7 +2998,12 @@ Copyright (c) 2015 Daniel Eden
 		opacity: 0;
 		-webkit-transform: scale3d(0.1, 0.1, 0.1) translate3d(1000px, 0, 0);
 		transform: scale3d(0.1, 0.1, 0.1) translate3d(1000px, 0, 0);
-		-webkit-animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
+		-webkit-animation-timing-function: cubic-bezier(
+			0.55,
+			0.055,
+			0.675,
+			0.19
+		);
 		animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
 	}
 
@@ -2968,7 +3021,12 @@ Copyright (c) 2015 Daniel Eden
 		opacity: 0;
 		-webkit-transform: scale3d(0.1, 0.1, 0.1) translate3d(1000px, 0, 0);
 		transform: scale3d(0.1, 0.1, 0.1) translate3d(1000px, 0, 0);
-		-webkit-animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
+		-webkit-animation-timing-function: cubic-bezier(
+			0.55,
+			0.055,
+			0.675,
+			0.19
+		);
 		animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
 	}
 
@@ -2991,7 +3049,12 @@ Copyright (c) 2015 Daniel Eden
 		opacity: 0;
 		-webkit-transform: scale3d(0.1, 0.1, 0.1) translate3d(0, 1000px, 0);
 		transform: scale3d(0.1, 0.1, 0.1) translate3d(0, 1000px, 0);
-		-webkit-animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
+		-webkit-animation-timing-function: cubic-bezier(
+			0.55,
+			0.055,
+			0.675,
+			0.19
+		);
 		animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
 	}
 
@@ -3009,7 +3072,12 @@ Copyright (c) 2015 Daniel Eden
 		opacity: 0;
 		-webkit-transform: scale3d(0.1, 0.1, 0.1) translate3d(0, 1000px, 0);
 		transform: scale3d(0.1, 0.1, 0.1) translate3d(0, 1000px, 0);
-		-webkit-animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
+		-webkit-animation-timing-function: cubic-bezier(
+			0.55,
+			0.055,
+			0.675,
+			0.19
+		);
 		animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
 	}
 
@@ -3069,7 +3137,12 @@ Copyright (c) 2015 Daniel Eden
 		opacity: 1;
 		-webkit-transform: scale3d(0.475, 0.475, 0.475) translate3d(0, -60px, 0);
 		transform: scale3d(0.475, 0.475, 0.475) translate3d(0, -60px, 0);
-		-webkit-animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
+		-webkit-animation-timing-function: cubic-bezier(
+			0.55,
+			0.055,
+			0.675,
+			0.19
+		);
 		animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
 	}
 
@@ -3089,7 +3162,12 @@ Copyright (c) 2015 Daniel Eden
 		opacity: 1;
 		-webkit-transform: scale3d(0.475, 0.475, 0.475) translate3d(0, -60px, 0);
 		transform: scale3d(0.475, 0.475, 0.475) translate3d(0, -60px, 0);
-		-webkit-animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
+		-webkit-animation-timing-function: cubic-bezier(
+			0.55,
+			0.055,
+			0.675,
+			0.19
+		);
 		animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
 	}
 
@@ -3188,7 +3266,12 @@ Copyright (c) 2015 Daniel Eden
 		opacity: 1;
 		-webkit-transform: scale3d(0.475, 0.475, 0.475) translate3d(0, 60px, 0);
 		transform: scale3d(0.475, 0.475, 0.475) translate3d(0, 60px, 0);
-		-webkit-animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
+		-webkit-animation-timing-function: cubic-bezier(
+			0.55,
+			0.055,
+			0.675,
+			0.19
+		);
 		animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
 	}
 
@@ -3208,7 +3291,12 @@ Copyright (c) 2015 Daniel Eden
 		opacity: 1;
 		-webkit-transform: scale3d(0.475, 0.475, 0.475) translate3d(0, 60px, 0);
 		transform: scale3d(0.475, 0.475, 0.475) translate3d(0, 60px, 0);
-		-webkit-animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
+		-webkit-animation-timing-function: cubic-bezier(
+			0.55,
+			0.055,
+			0.675,
+			0.19
+		);
 		animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
 	}
 
